fix: GlobalScrollbar 某些条件下高度不更新的问题

--- a/packages/mac-scrollbar/src/ThumbBar.less
+++ b/packages/mac-scrollbar/src/ThumbBar.less
@@ -1,3 +1,5 @@
+@ms-scrollbar-track-size: 16px;
+
 .ms-track {
   position: absolute;
   background: transparent;
@@ -12,13 +14,14 @@
   &.ms-y {
     top: 0;
     right: 0;
-    width: 16px;
+    width: @ms-scrollbar-track-size;
+    height: 100%;
     border-left: 1px solid transparent;
 
     &.ms-active,
     &:hover {
       .ms-thumb {
-        width: 12px;
+        width: @ms-scrollbar-track-size - 4;
       }
     }
 
@@ -35,7 +38,7 @@
         position: absolute;
         top: 0;
         right: -2px;
-        width: 2px;
+        width: @ms-scrollbar-track-size;
         height: 100%;
         content: '';
       }
@@ -45,13 +48,14 @@
   &.ms-x {
     bottom: 0;
     left: 0;
-    height: 16px;
+    width: 100%;
+    height: @ms-scrollbar-track-size;
     border-top: 1px solid transparent;
 
     &.ms-active,
     &:hover {
       .ms-thumb {
-        height: 12px;
+        height: @ms-scrollbar-track-size - 4;
       }
     }
 
@@ -69,7 +73,7 @@
         bottom: -2px;
         left: 0;
         width: 100%;
-        height: 2px;
+        height: @ms-scrollbar-track-size;
         content: '';
       }
     }
